--- a/src/style/components/loading/loading.scss
+++ b/src/style/components/loading/loading.scss
@@ -3,6 +3,6 @@
     height: 100vh;
     font-size: 2rem;
     color: white;
-    background-color: #111111;
+    background-color: $mainBackgroundColor;
     padding: 20px;
 }
