--- a/src/style/components/errors/error.scss
+++ b/src/style/components/errors/error.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: $mainBackgroundColor;
 
     .error__tilt__flex__container {
 
