--- a/src/style/components/modal/navbarmodal.scss
+++ b/src/style/components/modal/navbarmodal.scss
@@ -1,3 +1,5 @@
+@import './navbarmodalItem.scss';
+
 .navbar__modal {
     background-color: #000000;
     height: 100vh;
@@ -7,16 +9,21 @@
     top: 0;
     left: 0;
     animation: topAnimation 0.5s;
-    
-    .navbar__modal__button {
-        background-color: inherit;
-        position: absolute;
-        top: 30px;
-        right: 40px;
-        color: #e23f30;
-        border: none;
-        box-shadow: none;
-        cursor: pointer;
+
+    .navbar__modal__button__container {
+        width: 100%;
+        height: 150px;
+
+        .navbar__modal__button {
+            background-color: inherit;
+            position: absolute;
+            top: 30px;
+            right: 40px;
+            color: #e23f30;
+            border: none;
+            box-shadow: none;
+            cursor: pointer;
+        }
     }
 
     .navbar__modal__container {
@@ -26,36 +33,18 @@
         text-align: justify;
         padding: 50px;
         color: $fontMainColor;
-
-        .navbar__modal__item {
-            margin-right: 40px;
-            margin-left: 40px;
-
-            .navbar__modal__item__title{
-                font-size: $fontSizeMedium;
-            }
-
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-            }
-    
-            li {
-                font-size: $fontSizeSmall;
-                padding-top: 5px;
-                padding-bottom: 5px;
-                color: $fontNavbarModalColor;
-            }
-    
-            a:hover {
-                text-decoration: underline;
-            }
-
-        }
-
-       
+        flex-wrap: wrap;
     }
+    
+}
+
+@include breakpint(tablet) {
+  .navbar__modal {
+    .navbar__modal__container {
+      width: 100%;
+      padding: 0px;
+    }
+  }
 }
 
 @keyframes topAnimation {
