--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,3 +25,4 @@
 @import './components//navbar/navbar.scss';
 @import './components/modal/navbarmodal.scss';
 @import './components/pagination//pagination.scss';
+@import './components/youtubetrailer/youtubetrailer.scss';
