--- a/src/style/views/movie/moviecontainer.scss
+++ b/src/style/views/movie/moviecontainer.scss
@@ -27,19 +27,26 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
-        min-height: 400px;
+        flex-wrap: wrap;
+        min-height: 500px;
+        justify-content: flex-start;
+        align-items: stretch;
+        gap: 20px;
+        margin-bottom: 20px;
 
        .movie__trailer__img__box {
-            border: 1px solid red;
+            background-color: rgb(20, 20, 20);
+            padding: 10px;
+            height: 500px;
 
            .movie__trailer__img {
-                height: 300px;
+            height: 100%;
            }
        }
 
        .movie__trailer__box {
-            border: 1px solid red;
+            background-color: rgb(20, 20, 20);
+            flex-grow: 4;
        }
     }
 
