--- a/src/style/views/movie/moviecontainer.scss
+++ b/src/style/views/movie/moviecontainer.scss
@@ -98,7 +98,7 @@
 
             p {
                 margin-top: 0.9rem;
-                font-size: $fontSizeSmall;
+                font-size: 1.2rem;
                 font-weight: normal;
             }
 
