--- a/src/style/components/rowmovies/rowmovies.scss
+++ b/src/style/components/rowmovies/rowmovies.scss
@@ -27,6 +27,10 @@
             top: 0;
             margin-left: 5px;
             margin-right: 5px;
+
+            svg {
+                cursor: pointer;
+            }
         }
 
         .row__slide__button_left, .row__slide__button_right {
