--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,6 +16,9 @@
 @import './views/movies/movies.scss';
 @import './views/moviesearch/moviesearch.scss';
 
+// page not found
+@import './views/notfound/notfound.scss';
+
 
 // row movies components
 @import './components/rowmovies/rowmovies.scss';
