--- a/src/style/components/banner/banner.scss
+++ b/src/style/components/banner/banner.scss
@@ -1,5 +1,6 @@
 .banner {
     color: $fontMainColor;
+    -o-object-fit: contain;
     object-fit: contain;
     height: 448px;
     background-size: cover;
@@ -9,7 +10,8 @@
     .banner__contents {
         padding-top: 140px;
         height: 190px;
-        margin-left: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .banner__title {
@@ -19,12 +21,13 @@
     }
 
     .banner__description {
-        width: 45rem;
+        width: 100%;
         line-height: 1.3;
         padding-top: 1rem;
         font-size: $fontSizeSmall;
         max-width: 360px;
         height: 80px;
+        text-align: justify;
     }
 
     .banner__button {
@@ -44,14 +47,26 @@
         &:hover {
             color: #000000;
             background-color: #e6e6e6;
+            -webkit-transition: all 0.2s;
+            -o-transition: all 0.2s;
             transition: all 0.2s;
         }
-
     }
 
     .banner__fadeBottom {
-       height: 8rem;
-       margin-top: 10px;
-       background-image: linear-gradient(180deg, rgba(37,37,37,0) 0%, #111 100%); 
+        height: 8rem;
+        margin-top: 10px;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(37,37,37,0)), to(#111));
+        background-image: -o-linear-gradient(top, rgba(37,37,37,0) 0%, #111 100%);
+        background-image: linear-gradient(180deg, rgba(37,37,37,0) 0%, #111 100%);  
     }
+}
+
+@include breakpint(tablet){
+    .banner {
+        h1 {
+            font-size: 0.8rem;
+        }
+    }
+
 }
