--- a/src/style/components/common/buttons/goback.scss
+++ b/src/style/components/common/buttons/goback.scss
@@ -11,7 +11,8 @@
         border-radius: 1rem;
         font-size: $fontSizeSmall;
         padding: 0.3rem 0.8rem;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         cursor: pointer;
         position: relative;
         background-color: inherit;
