--- a/src/style/components/modal/navbarmodal.scss
+++ b/src/style/components/modal/navbarmodal.scss
@@ -8,7 +8,8 @@
     z-index: 100;
     top: 0;
     left: 0;
-    animation: topAnimation 0.5s;
+    -webkit-animation: topAnimation 0.5s;
+            animation: topAnimation 0.5s;
 
     .navbar__modal__button__container {
         width: 100%;
@@ -21,6 +22,7 @@
             right: 40px;
             color: #e23f30;
             border: none;
+            -webkit-box-shadow: none;
             box-shadow: none;
             cursor: pointer;
         }
@@ -28,30 +30,54 @@
 
     .navbar__modal__container {
         width: 80%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         text-align: justify;
         padding: 50px;
         color: $fontMainColor;
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
     
 }
 
 @include breakpint(tablet) {
   .navbar__modal {
+    .navbar__modal__button__container {
+      height: 80px;
+    }
     .navbar__modal__container {
       width: 100%;
       padding: 0px;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start; 
     }
   }
 }
 
-@keyframes topAnimation {
-    0% {
-      transform: translateY(-100%);
-    }
-    100% {
-      transform: translateY(0%);
-    }
+@-webkit-keyframes topAnimation {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
   }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes topAnimation {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
