--- a/src/style/components/navbar/navbar.scss
+++ b/src/style/components/navbar/navbar.scss
@@ -3,11 +3,16 @@
     height: 30px;
     z-index: 1;
     background-color: #000000;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     .nav__logo__container {
         img {
+            -o-object-fit: contain;
             object-fit: contain;
             width: 80px;
         }
@@ -15,13 +20,14 @@
 
     .nav__modal__container {
         button {
-                text-decoration: none;
-                padding: 5px 10px;
-                background-color: inherit;
-                color: #e23f30;
-                border: none;
-                box-shadow: none;
-                cursor: pointer;
-            }
+            text-decoration: none;
+            padding: 5px 10px;
+            background-color: inherit;
+            color: #e23f30;
+            border: none;
+            -webkit-box-shadow: none;
+                    box-shadow: none;
+            cursor: pointer;
+        }
     }
 }
