--- a/src/style/components/youtubetrailer/youtubetrailer.scss
+++ b/src/style/components/youtubetrailer/youtubetrailer.scss
@@ -1,11 +1,19 @@
 .youtube__component {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     height: 500px;
 
     .youtube__component__item {
-        flex-grow: 1;
+        -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
         text-align: center;
         color: #e23f30;
         font-size: $fontSizeMedium;
