--- a/src/style/views/movies/movielistdisplay.scss
+++ b/src/style/views/movies/movielistdisplay.scss
@@ -3,9 +3,14 @@
     .movie__list__cards {
         width: 80%;
         margin: 0 auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly;
     }
 
 }
