--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,4 +34,5 @@
 @import './components/pagination//pagination.scss';
 @import './components/youtubetrailer/youtubetrailer.scss';
 @import './components/moviescomponent/moviecard.scss';
+@import './components/footer/footer.scss';
 
